<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuRoot"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="#eeeeee"
        android:padding="5dp"
        android:layout_marginBottom="3dp">

        <TextView
            android:id="@+id/textViewLoginStatus"
            android:text="@string/login_status_defalt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"/>

        <TextView
            android:id="@+id/textViewUsrName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_name_defalt"
            android:layout_weight="3"/>

        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_contact_picture_2"
            android:layout_weight="1"/>

    </LinearLayout>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonGetRank"
            android:text="@string/get_rank"
            android:paddingLeft="20dp"
            android:gravity="center|left"
            android:layout_width="match_parent"
            android:background="@color/darkBack"
            android:textSize="18sp"
            android:layout_marginBottom="3dp"
            android:layout_height="80dp" />

        <Button
            android:id="@+id/buttonSearch"
            android:text="@string/search"
            android:paddingLeft="20dp"
            android:gravity="center|left"
            android:layout_width="match_parent"
            android:background="@color/darkBack"
            android:textSize="18sp"
            android:layout_marginBottom="3dp"
            android:layout_height="80dp" />

        <Button
            android:id="@+id/buttonGetMyList"
            android:text="@string/get_mylist"
            android:paddingLeft="20dp"
            android:gravity="center|left"
            android:layout_width="match_parent"
            android:background="@color/darkBack"
            android:textSize="18sp"
            android:layout_marginBottom="3dp"
            android:layout_height="80dp"/>

        <Button
            android:id="@+id/buttonSetting"
            android:text="@string/setting"
            android:paddingLeft="20dp"
            android:gravity="center|left"
            android:layout_width="match_parent"
            android:background="@color/darkBack"
            android:textSize="18sp"
            android:layout_marginBottom="3dp"
            android:layout_height="80dp" />

    </LinearLayout>



</ScrollView>

</LinearLayout>