<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialogSearchRoot">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_key_title"
                    android:textSize="18sp"
                    android:layout_margin="5dp"/>
                <Switch
                    android:id="@+id/switchSearchDirect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:checked="false"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/search_direct_title"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewContainerSearchKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>


            <CheckBox
                android:id="@+id/checkBoxSearchTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/search_tags"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_sort_title"
                android:textSize="18sp"
                android:layout_margin="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spinnerSearchSort"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:entries="@array/search_sort_name"
                    android:background="@drawable/spinner_back">
                </Spinner>
                <ToggleButton
                    android:id="@+id/toggleSearchSort"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:textOn="@string/search_sort_up"
                    android:textOff="@string/search_sort_down"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_limit_title"
                android:textSize="18sp"
                android:layout_margin="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/editTextSearchLimit"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="20dp"
                    android:maxLines="1"
                    android:inputType="number"
                    android:text="50"
                    android:textAlignment="center"
                    android:background="@color/darkBack"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:textSize="15sp"
                    android:text="@string/search_limit_mes"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_filter_title"
                    android:textSize="18sp"
                    android:layout_margin="5dp"/>
                <Switch
                    android:id="@+id/switchSearchFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:checked="false"
                    android:layout_marginRight="40dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/viewContainerSearchFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
