<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialogRankingRoot">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/spinner_title_genre"
        android:layout_margin="5dp"/>

    <Spinner
        android:id="@+id/spinnerRankingGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/spinner_array_genre_name">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/spinner_title_kind"
        android:layout_margin="5dp"/>

    <Spinner
        android:id="@+id/spinnerRankingKind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/spinner_array_kind_name">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/spinner_title_period"
        android:layout_margin="5dp"/>

    <Spinner
        android:id="@+id/spinnerRankingPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:entries="@array/spinner_array_period_name">
    </Spinner>

</LinearLayout>