<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/viewSettingYoutubeRoot">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_youtube_mes"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_youtube_watch"
            android:textSize="15sp"
            android:textColor="@color/text"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"/>
        <Switch
            android:id="@+id/switchYoutubeSettingWatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="40dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_youtube_comment"
            android:textSize="15sp"
            android:textColor="@color/text"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"/>
        <Switch
            android:id="@+id/switchYoutubeSettingComment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:paddingRight="40dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</LinearLayout>